[#6260] Update ASM version 7.1 to 7.2