@@ -93,7 +93,6 @@
                     <compilerVersion>${jdk.version}</compilerVersion>
                     <executable>${jdk.home}/bin/javac</executable>
                     <compilerArgs>
-                        <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -110,7 +109,6 @@
                         <exclude>**/*$*</exclude>
                     </excludes>
                     <argLine>
-                        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                         -Dfile.encoding=${encoding}
                     </argLine>
                     <jvm>${test.jdk.home}/bin/java</jvm>
